[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-kggen"
version = "0.1.3"
authors = [
    {name = "Vasudev Gupta", email = "guptavasudelhi@gmail.com"},
]
description = "A powerful knowledge graph generation library using LangChain and LLM models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
keywords = [
    "knowledge-graph",
    "langchain",
    "llm",
    "nlp",
    "entity-extraction",
    "relation-extraction",
    "graph-generation",
    "artificial-intelligence"
]
dependencies = [
    "langchain-core>=0.3.6",
    "langchain>=0.3.25",
    "pydantic>=2.0.0",
    "nltk>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "networkx>=3.5"
]

[project.urls]
"Homepage" = "https://github.com/vasudevgupta31/langchain-kggen.git"
"Bug Reports" = "https://github.com/vasudevgupta31/langchain-kggen.git/issues"
"Source" = "https://github.com/vasudevgupta31/langchain-kggen.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["langchain_kggen*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true